--- a/hugo/Dockerfile
+++ b/hugo/Dockerfile
@@ -1,7 +1,4 @@
-FROM busybox
-ENV HUGO_VERSION=0.89.4
-RUN wget -O- https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_Linux-64bit.tar.gz | tar zx
+FROM klakegg/hugo:ext-alpine
 
-FROM gcr.io/distroless/cc
-ENTRYPOINT ["/hugo"]
-COPY --from=0 /hugo /
+RUN apk add git && \
+  git config --global --add safe.directory /src
