--- a/ngnix/Dockerfile
+++ b/ngnix/Dockerfile
@@ -1,6 +1,6 @@
 FROM nginx:alpine
 COPY ./ngnix/ngnix.conf /etc/nginx/conf.d/configfile.template
-COPY ./example/public/index.xml /usr/share/nginx/html/index.xml
+COPY ./public/ /usr/share/nginx/html/
 
 ENV PORT 8080
 ENV HOST 0.0.0.0
