--- a/hugo/Dockerfile
+++ b/hugo/Dockerfile
@@ -1,4 +1,7 @@
-FROM klakegg/hugo:ext-alpine
+FROM registry.gitlab.com/pages/hugo/hugo_extended:0:79.1
 
-RUN apk add git && \
-  git config --global --add safe.directory /src
+RUN apk add --update --nocache git
+
+RUN apk add --update npm
+
+ENTRYPOINT /user/bin/hugo
