--- a/hugo/Dockerfile
+++ b/hugo/Dockerfile
@@ -1,7 +1,6 @@
-#FROM klakegg/hugo:ext-alpine
+FROM klakegg/hugo:ext-alpine
 
-FROM klakegg/hugo:ext-ubuntu as builder
+RUN apk add git && \
+  git config --global --add safe.directory /src
 
- 
-RUN npm install
-RUN npm install -g @fullhuman/postcss-purgecss rtlcss
+RUN apk add --update npm
