--- a/ngnix/Dockerfile
+++ b/ngnix/Dockerfile
@@ -3,7 +3,7 @@ COPY ./ngnix/ngnix.conf /etc/nginx/conf.d/ngnix.conf
 RUN rm /etc/nginx/conf.d/default.conf 
 COPY ./public/ /usr/share/nginx/html/
 
-ENV PORT 8080
-ENV HOST 0.0.0.0
+#ENV PORT 8080
+#ENV HOST 0.0.0.0
 EXPOSE 8080
-CMD sh -c "envsubst '\$PORT' < /etc/nginx/conf.d/configfile.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
+#CMD sh -c "envsubst '\$PORT' < /etc/nginx/conf.d/configfile.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
